{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 43,
  "lineage": "aed530f2-f115-e87c-88c3-0553c43036d0",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/6dc04dce-61ca-4a0a-a008-d5a5e06b8b1a/resourceGroups/terrrformtest-central/providers/Microsoft.Network/networkInterfaces/terraformtestvnet-central-nic",
            "internal_domain_name_suffix": "1vouvwa0y32ufgrqng4vioywcb.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal1",
                "primary": true,
                "private_ip_address": "192.178.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/6dc04dce-61ca-4a0a-a008-d5a5e06b8b1a/resourceGroups/terrrformtest-central/providers/Microsoft.Network/virtualNetworks/terraformtestvnet-central-test/subnets/terraformtestvnet-subnet1-cetral"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralindia",
            "name": "terraformtestvnet-central-nic",
            "private_ip_address": "192.178.1.4",
            "private_ip_addresses": [
              "192.178.1.4"
            ],
            "resource_group_name": "terrrformtest-central"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "terraformtestvnet-central-nic",
            "resource_group_name": "terrrformtest-central",
            "subscription_id": "6dc04dce-61ca-4a0a-a008-d5a5e06b8b1a"
          },
          "dependencies": [
            "azurerm_resource_group.test",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6dc04dce-61ca-4a0a-a008-d5a5e06b8b1a/resourceGroups/terrrformtest-central/providers/Microsoft.Network/networkSecurityGroups/terraformtestvnet-central-nsg",
            "location": "centralindia",
            "name": "terraformtestvnet-central-nsg",
            "resource_group_name": "terrrformtest-central",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rdp",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "terraformtestvnet-central-nsg",
            "resource_group_name": "terrrformtest-central",
            "subscription_id": "6dc04dce-61ca-4a0a-a008-d5a5e06b8b1a"
          },
          "dependencies": [
            "azurerm_resource_group.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/6dc04dce-61ca-4a0a-a008-d5a5e06b8b1a/resourceGroups/terrrformtest-central/providers/Microsoft.Network/networkSecurityGroups/terraformtestvnet-central-nsg/securityRules/rdp",
            "name": "rdp",
            "network_security_group_name": "terraformtestvnet-central-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "terrrformtest-central",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "rdp",
            "network_security_group_name": "terraformtestvnet-central-nsg",
            "resource_group_name": "terrrformtest-central",
            "subscription_id": "6dc04dce-61ca-4a0a-a008-d5a5e06b8b1a"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg1",
            "azurerm_resource_group.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.178.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/6dc04dce-61ca-4a0a-a008-d5a5e06b8b1a/resourceGroups/terrrformtest-central/providers/Microsoft.Network/virtualNetworks/terraformtestvnet-central-test/subnets/terraformtestvnet-subnet1-cetral",
            "name": "terraformtestvnet-subnet1-cetral",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "terrrformtest-central",
            "virtual_network_name": "terraformtestvnet-central-test"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "terraformtestvnet-subnet1-cetral",
            "resource_group_name": "terrrformtest-central",
            "subscription_id": "6dc04dce-61ca-4a0a-a008-d5a5e06b8b1a",
            "virtual_network_name": "terraformtestvnet-central-test"
          },
          "dependencies": [
            "azurerm_resource_group.test",
            "azurerm_virtual_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_assosote",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6dc04dce-61ca-4a0a-a008-d5a5e06b8b1a/resourceGroups/terrrformtest-central/providers/Microsoft.Network/virtualNetworks/terraformtestvnet-central-test/subnets/terraformtestvnet-subnet1-cetral",
            "network_security_group_id": "/subscriptions/6dc04dce-61ca-4a0a-a008-d5a5e06b8b1a/resourceGroups/terrrformtest-central/providers/Microsoft.Network/networkSecurityGroups/terraformtestvnet-central-nsg",
            "subnet_id": "/subscriptions/6dc04dce-61ca-4a0a-a008-d5a5e06b8b1a/resourceGroups/terrrformtest-central/providers/Microsoft.Network/virtualNetworks/terraformtestvnet-central-test/subnets/terraformtestvnet-subnet1-cetral"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg1",
            "azurerm_resource_group.test",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.178.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "d84a5ddd-c71a-4279-9a30-69bd543b1611",
            "id": "/subscriptions/6dc04dce-61ca-4a0a-a008-d5a5e06b8b1a/resourceGroups/terrrformtest-central/providers/Microsoft.Network/virtualNetworks/terraformtestvnet-central-test",
            "location": "centralindia",
            "name": "terraformtestvnet-central-test",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "terrrformtest-central",
            "subnet": [
              {
                "address_prefixes": [
                  "192.178.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/6dc04dce-61ca-4a0a-a008-d5a5e06b8b1a/resourceGroups/terrrformtest-central/providers/Microsoft.Network/virtualNetworks/terraformtestvnet-central-test/subnets/terraformtestvnet-subnet1-cetral",
                "name": "terraformtestvnet-subnet1-cetral",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/6dc04dce-61ca-4a0a-a008-d5a5e06b8b1a/resourceGroups/terrrformtest-central/providers/Microsoft.Network/networkSecurityGroups/terraformtestvnet-central-nsg"
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "terraformtestvnet-central-test",
            "resource_group_name": "terrrformtest-central",
            "subscription_id": "6dc04dce-61ca-4a0a-a008-d5a5e06b8b1a"
          },
          "dependencies": [
            "azurerm_resource_group.test"
          ]
        }
      ]
    }
  ]
}